
	- Changed header name from FirePHP-Mask to FirePHP-RendererURL
	- Added support for javascript in the rendered HTML
	- Updated to ignore case of header names
  - Implemented data rendering in Server tab where data is fetched from response headers
	- Added "Server" tab to Firebug's Net panel requests
	- Abandoned previous idea in favor of simplicity
	
----------

  - Changed PINF-org.firephp-* headers to X-PINF-org.firephp-*
  - Updated UI design
  - Added variable inspector and viewer
  - Added console viewer
  - Added support for platform-specific CSS and added Mac look
  - Introduced versioning for the FirePHP XML protocol and set to 0.2
  - Added a FirePHPChannel object to the content windows that can be
    used to communicate with/via FirePHP
  - Added event/listener based communication of all components via FirePHPChannel
  - Revised format of capabilities definition
  - Revised how capability definitions are loaded
  - Added support to allow and block capability definition loading for hosts
  - Implemented support for build version
  - Added FirePHP/x.x.x to User-Agent Request header
  - Implemented fetching of intelligence data from X-PINF-org.firephp-Data header
  - Fixed bug to display application ID if label is not found
  - Fixed variable list loading
  - Fixed variable selection and display
  - Implemented basic javascript array renderer
  - Implemented SESSION variables list
  
2007-02-02 - Release Version: 0.0.5

	- Wrapped add progress listener into try/catch to prevent some console warnings
	- Removed debug dump statements

2007-02-01 - Release Version: 0.0.4

	- New code structure
	- Lots of feature enhancements

2007-01-12 - Release Version: 0.0.3

	- Set defaultPanelName preference to "console" if set to
	  "FirePHP" to prevent Firebug from failing silently when
	  extension is removed and "FirePHP" panel is still selected.
	  Thanks to Matthieu Honel for the suggestion.
	  A patch has been submitted to Firebug.